--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,14 +14,16 @@
   /* colors */
   --background-color: white;
   --light-color: #f8f8f8;
+  --footer-background-color: #202020;
+  --footer-text-color: #F7F7F7;
   --dark-color: #505050;
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback, sans-serif;
-  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
+  --body-font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --heading-font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -37,7 +39,7 @@
   --heading-font-size-xs: 22px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 94px;
 }
 
 /* fallback fonts */
@@ -154,16 +156,12 @@ button {
 }
 
 /* links */
-a:any-link {
+a {
   color: var(--link-color);
   text-decoration: none;
   word-break: break-word;
 }
 
-a:hover {
-  color: var(--link-hover-color);
-  text-decoration: underline;
-}
 
 /* buttons */
 a.button:any-link,
@@ -235,7 +233,8 @@ main > .section {
 main > .section > div {
   max-width: 1200px;
   margin: auto;
-  padding: 0 24px;
+  padding-left:10px;
+  padding-right:0px;
 }
 
 main > .section:first-of-type {
