--- a/blocks/san-diego-surf/san-diego-surf.css
+++ b/blocks/san-diego-surf/san-diego-surf.css
@@ -43,8 +43,7 @@ main > .section:nth-of-type(1){
     padding-right: 10px;
 }
 
-#san-diego-surf
--by-camper-van {
+#san-diego-surf-spots{
     font-family: var(--fontFamilySerif, "Asar", Georgia, "Times New Roman", Times, serif);
     font-weight: var(--fontWeightNormal, normal);
     margin-bottom: 13.5px;
@@ -52,21 +51,20 @@ main > .section:nth-of-type(1){
     font-size: 40px;
 }
 
-#by-jacob-wester {
+#by-justin-barr {
     font-family: var(--fontFamilySansSerif, "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif);
     font-weight: var(--fontWeightBold, 600);
     font-size: 1pc;
 }
 
-.san-diego-surf
--container  p {
+.san-diego-surf-container  h2 {
     font-size: 18px;
     line-height: 2.5;
     margin: 0 0 13.5px;
+    font-weight: normal;
 }
 
-.san-diego-surf
--container p strong {
+.san-diego-surf-container p strong {
     font-family: var(--fontFamilySerif, "Asar", Georgia, "Times New Roman", Times, serif);
     font-size: 36px;
     line-height: 0;
