home page added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
   --footer-text-color: #F7F7F7;
   --dark-color: #505050;
   --text-color: #131313;
-  --link-color: #3b63fb;
+  --link-color: black;
   --link-hover-color: #1d3ecf;
 
   /* fonts */
