--- a/blocks/articles-cards/articles-cards.css
+++ b/blocks/articles-cards/articles-cards.css
@@ -167,7 +167,7 @@ height:500px;
   /* Style for the image */
 .card img.card-image {
     max-width: 100%;
-    height: auto;
+    /* height: auto; */
     /* border-radius: 10px; */
     margin-bottom: 10pxn
   }
