--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -318,3 +318,30 @@ header nav .nav-hamburger {
       transition: padding-bottom .5s ease, padding-top .5s;
   }
 
+
+
+  @media (width < 900px) {
+  header nav .nav-sections ul{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  header nav .nav-sections ul > li{
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+}
+ 
+  
