--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -86,7 +86,7 @@
 .flex-container{
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between; /* Space between the elements */
+  justify-content: space-between;
 /* background-color: aqua; */
 align-items: center;
   /* justify-content: center; */
@@ -175,7 +175,7 @@ height:500px;
     }
    
   }
-  /* Style for the card container */
+ 
 .card-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -210,7 +210,7 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 li{
   list-style: none;
 }
-/* Style for individual cards */
+
 .card {
   /* border: 1px solid #ddd; */
   /* border-radius: 10px; */
@@ -225,19 +225,19 @@ li{
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); */
 /* } */
 
-/* Title styling */
+
 .card h3 {
   margin-bottom: 10px;
   font-size: 1.2rem;
 }
 
-/* Description styling */
+
 .card p {
   margin: 0;
   color: #555;
   font-size: 0.9rem;
 }
-/* Style for the image */
+
 .card img.card-image {
   max-width: 100%;
   /* height: auto; */
