--- a/blocks/arctic-surfing/arctic-surfing.css
+++ b/blocks/arctic-surfing/arctic-surfing.css
@@ -165,6 +165,7 @@ main > .section:nth-of-type(1){
     font-weight: var(--fontWeightBold, 600);
     font-size: 14px;
     padding-bottom: 100px;
+    padding-left:0px;
 }
 
 .flex-parent-container div:nth-of-type(2) ul,
