--- a/blocks/guide-to-la/guide-to-la.css
+++ b/blocks/guide-to-la/guide-to-la.css
@@ -119,7 +119,7 @@ main > .section:nth-of-type(1){
     justify-content: center;
 }
 
-#jacob-wester {
+#stacey-roswells {
     font-size: 17px;
     font-family: var(--fontFamilySerif, "Asar", Georgia, "Times New Roman", Times, serif);
     font-weight: normal;
@@ -165,6 +165,7 @@ main > .section:nth-of-type(1){
     font-weight: var(--fontWeightBold, 600);
     font-size: 14px;
     padding-bottom: 100px;
+    /* padding-left:0px; */
 }
 
 .flex-parent-container div:nth-of-type(2) ul,
