--- a/blocks/custom-cards/custom-cards.css
+++ b/blocks/custom-cards/custom-cards.css
@@ -110,7 +110,7 @@ height:500px;
 
 
 
-.card-container {
+.container-trips,.container-articles{
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
@@ -119,29 +119,29 @@ height:500px;
     /* padding: 0 1px; */
   }
  
-    .card-container img{
+  .container-trips img,.container-articles img{
         width:260px;
         height:200px;
   /* margin-right: 100px; */
     }
   
   @media (width >=548px) {
-    .custom-cards{
+    .container-trips,.container-articles{
   grid-template-columns: 1fr 1fr;
     }
   }
   @media (width >=850px) {
-    .card-container{
+    .container-trips,.container-articles{
   grid-template-columns: 1fr 1fr 1fr;
     }
   }
   @media (width >=850px) {
-    .card-container{
+    .container-trips,.container-articles{
   grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
   
-  .card {
+  .card-trips,.card-articles {
     /* border: 1px solid #ddd; */
     /* border-radius: 10px; */
     /* padding: 15px; */
@@ -156,40 +156,40 @@ height:500px;
   /* } */
   
  
-  .card h3 {
+  .card-trips h3,.card-articles h3 {
     margin-bottom: 10px;
     font-size: 1.2rem;
   }
   
 
-  .card p {
+  .card-trips p,.card-articles p {
     margin: 0;
     color: #555;
     font-size: 0.9rem;
   }
  
-.card img.card-image {
+.image-trips,.image-articles {
     max-width: 100%;
     /* height: auto; */
     /* border-radius: 10px; */
-    margin-bottom: 10pxn
+    /* margin-bottom: 10pxn */
   }
 
-  .custom-cards-container .default-content-wrapper > h2{
+  /* .custom-cards-container .default-content-wrapper > h2{
       font-weight: normal;
       font-size:48px;
       font-family: var(--fontFamilySerif, "Asar", Georgia, "Times New Roman", Times, serif);
-  }
-  .custom-cards-container > div:nth-of-type(3) >  h2:nth-of-type(1):after{
+  } */
+  /* .custom-cards-container > div:nth-of-type(3) >  h2:nth-of-type(1):after{
     font-weight: normal;
     border-bottom: 2px solid var(--brandPrimary, #ffea00);
     content: "";
     display: block;
     padding-top: 8px;
     width:84px;
-}
+} */
 
-.custom-cards-container > div:nth-of-type(3) >  p:nth-of-type(1){
+/* .custom-cards-container > div:nth-of-type(3) >  p:nth-of-type(1){
   font-size:18px;
 }
 
@@ -200,7 +200,7 @@ height:500px;
     margin-top: 70px;
     margin-bottom: 70px;
     width: 100%;
-  }
+  } */
 
   .flex-container{
     display: flex;
