--- a/blocks/custom-cards/custom-cards.css
+++ b/blocks/custom-cards/custom-cards.css
@@ -165,6 +165,7 @@ height:500px;
   .card-trips p,.card-articles p {
     margin: 0;
     color: #555;
+
     font-size: 0.9rem;
   }
  
@@ -174,6 +175,13 @@ height:500px;
     /* height: auto; */
     /* border-radius: 10px; */
     /* margin-bottom: 10pxn */
+  }
+  .card-trips h3{
+    color:brown;
+
+  }
+  .card-trips p{
+    color:rgb(112, 91, 75);
   }
   .image-trips{
     border-radius:50%;
