--- a/blocks/members-only/members-only.css
+++ b/blocks/members-only/members-only.css
@@ -1,28 +1,29 @@
-.flex-container{
+.members-only .flex-container{
     display: flex;
     flex-direction: column;
 
   }
   @media (width >= 767px) {
-    .flex-container{
+    .members-only .flex-container{
       flex-direction: row;
   }
-}
-  .flex-container h2{
+} 
+.members-only .flex-container h2{
     font-family: var(--fontFamilySansSerif, "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif);
     font-size: var(--fontSizeMedium, 18px);
     font-weight: var(--fontWeightBold, 600);
   }
 
 
-  .flex-primary-container > div:nth-child(1) > p,.flex-secondary-container > div:nth-child(1) > p{
+  .members-only .flex-primary-container > div:nth-child(1) > p,.members-only .flex-secondary-container > div:nth-child(1) > p{
   color: dimgray;
     font-size: var(--fontSizeSmall, 16px);
     text-transform: uppercase;
+    width:400px;
 
   } 
 
-.flex-primary-container > div:nth-child(2) > p,.flex-secondary-container > div:nth-child(2) > p{
+  .members-only .flex-primary-container > div:nth-child(2) > p,.members-only .flex-secondary-container > div:nth-child(2) > p{
     background-color: #ebebeb;
     color: dimgray;
     font-size: var(--fontSizeSmall, 16px);
@@ -32,20 +33,18 @@
     margin:30px 0;
     }
 
-    .flex-container p:nth-of-type(3){
+    .members-only .flex-container p:nth-of-type(3){
         color: dimgray;
           font-size: var(--fontSizeSmall, 14px);
           text-transform: uppercase;
           padding-top: 10px;
           
         }
-  .flex-secondary-container,.flex-primary-container{
-    padding-right:14px;
+        .members-only .flex-secondary-container,.members-only .flex-primary-container{
+     padding-right:14px;
     opacity:0.7;
   }
-  .flex-primary-container:before,.flex-secondary-container:before{
-    
- 
+  .members-only .flex-primary-container:before,.members-only .flex-secondary-container:before{
     
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -68,15 +67,15 @@
     z-index: 2;
 
 }
-   .flex-container img{
+.members-only .flex-container img{
     width:100%;
     max-height:300px;
     height:auto;
     object-fit: cover;
    }
 @media (width >= 1024px) {
-    .flex-primary-container,.flex-secondary-container{
-      width:340px;
+    .members-only .flex-primary-container,.members-only .flex-secondary-container{
+      width:400px;
   }
 }
 .members-only > div:nth-child(2) > div > p:after{
